2020-08-18  Antti Koivisto  <antti@apple.com>

        The CSS specificity of :host() pseudo-classes is wrong
        https://bugs.webkit.org/show_bug.cgi?id=202494
        <rdar://problem/66292568>

        Reviewed by Anders Carlsson.

        https://drafts.csswg.org/css-scoping/#host-selector

        “The specificity of :host() is that of a pseudo-class, plus the specificity of its argument.”

        * css/CSSSelector.cpp:
        (WebCore::simpleSelectorSpecificityInternal):

2020-08-18  Youenn Fablet  <youenn@apple.com>

        Add a JS built-in routine to mark a promise as handled
        https://bugs.webkit.org/show_bug.cgi?id=215558

        Reviewed by Darin Adler.

        Wrap long line of code inside a method to ease code readability.
        No change of behavior.

        * Modules/streams/ReadableStream.js:
        (pipeThrough):
        * Modules/streams/ReadableStreamInternals.js:
        (readableStreamError):
        (readableStreamReaderGenericRelease):
        * Modules/streams/StreamInternals.js:
        (markPromiseAsHandled):
        (shieldingPromiseResolve):
        * Modules/streams/WritableStreamInternals.js:
        (setUpWritableStreamDefaultWriter):
        (writableStreamRejectCloseAndClosedPromiseIfNeeded):
        (writableStreamDefaultWriterEnsureClosedPromiseRejected):
        (writableStreamDefaultWriterEnsureReadyPromiseRejected):

2020-08-17  Chris Dumez  <cdumez@apple.com>

        AudioContext.getOutputTimestamp() is missing
        https://bugs.webkit.org/show_bug.cgi?id=215591

        Reviewed by Darin Adler.

        AudioContext.getOutputTimestamp() is missing:
        - https://www.w3.org/TR/webaudio/#dom-audiocontext-getoutputtimestamp

        No new tests, rebaselined existing tests.

        * CMakeLists.txt:
        * DerivedSources-input.xcfilelist:
        * DerivedSources-output.xcfilelist:
        * DerivedSources.make:
        * Modules/webaudio/AudioContext.cpp: